Detalles de las interfaces

--- a/src/views/PAT-035/editEmpleado.hbs
+++ b/src/views/PAT-035/editEmpleado.hbs
@@ -13,20 +13,20 @@
                             <!-- Logo light -->
                             <a href="/PAT-035/home" class="logo-light">
                                 <span class="logo-lg">
-                                    <img src=" /images/logo.png" alt="logo">
+                                    <img src="" alt="logo">
                                 </span>
                                 <span class="logo-sm">
-                                    <img src=" /images/logo-sm.png" alt="small logo">
+                                    <img src="" alt="small logo">
                                 </span>
                             </a>
 
                             <!-- Logo Dark -->
                             <a href="/PAT-035/home" class="logo-dark">
                                 <span class="logo-lg">
-                                    <img src=" /images/logo-dark.png" alt="dark logo">
+                                    <img src="" alt="dark logo">
                                 </span>
                                 <span class="logo-sm">
-                                    <img src=" /images/logo-dark-sm.png" alt="small logo">
+                                    <img src="" alt="small logo">
                                 </span>
                             </a>
                         </div>
@@ -115,20 +115,20 @@
                 <!-- Brand Logo Light -->
                 <a href="/PAT-035/home" class="logo logo-light">
                     <span class="logo-lg">
-                        <img src=" /images/logo.png" alt="logo">
+                        <img src="" alt="logo">
                     </span>
                     <span class="logo-sm">
-                        <img src=" /images/logo-sm.png" alt="small logo">
+                        <img src="" alt="small logo">
                     </span>
                 </a>
 
                 <!-- Brand Logo Dark -->
                 <a href="/PAT-035/home" class="logo logo-dark">
                     <span class="logo-lg">
-                        <img src=" /images/logo-dark.png" alt="dark logo">
+                        <img src="" alt="dark logo">
                     </span>
                     <span class="logo-sm">
-                        <img src=" /images/logo-dark-sm.png" alt="small logo">
+                        <img src="" alt="small logo">
                     </span>
                 </a>
 
