--- a/src/views/PAT-035/estadisticasGlobales.hbs
+++ b/src/views/PAT-035/estadisticasGlobales.hbs
@@ -13,20 +13,20 @@
                             <!-- Logo light -->
                             <a href="/PAT-035/home" class="logo-light">
                                 <span class="logo-lg">
-                                    <img src=" /images/logo.png" alt="logo">
+                                    <img src="" alt="logo">
                                 </span>
                                 <span class="logo-sm">
-                                    <img src=" /images/logo-sm.png" alt="small logo">
+                                    <img src="" alt="small logo">
                                 </span>
                             </a>
 
                             <!-- Logo Dark -->
                             <a href="/PAT-035/home" class="logo-dark">
                                 <span class="logo-lg">
-                                    <img src=" /images/logo-dark.png" alt="dark logo">
+                                    <img src="" alt="dark logo">
                                 </span>
                                 <span class="logo-sm">
-                                    <img src=" /images/logo-dark-sm.png" alt="small logo">
+                                    <img src="" alt="small logo">
                                 </span>
                             </a>
                         </div>
@@ -115,20 +115,20 @@
                 <!-- Brand Logo Light -->
                 <a href="/PAT-035/home" class="logo logo-light">
                     <span class="logo-lg">
-                        <img src=" /images/logo.png" alt="logo">
+                        <img src="" alt="logo">
                     </span>
                     <span class="logo-sm">
-                        <img src=" /images/logo-sm.png" alt="small logo">
+                        <img src="" alt="small logo">
                     </span>
                 </a>
 
                 <!-- Brand Logo Dark -->
                 <a href="/PAT-035/home" class="logo logo-dark">
                     <span class="logo-lg">
-                        <img src=" /images/logo-dark.png" alt="dark logo">
+                        <img src="" alt="dark logo">
                     </span>
                     <span class="logo-sm">
-                        <img src=" /images/logo-dark-sm.png" alt="small logo">
+                        <img src="" alt="small logo">
                     </span>
                 </a>
 
@@ -219,11 +219,14 @@
                             <div class="col-12">
                                 <div class="page-title-box">                                    
                                     <div class="card-header d-flex justify-content-between align-items-center">
-                                        <h4 class="page-title col-3">Categorias de los Hoteles</h4>
+                                        <h4 class="page-title col-3">Categoria del Hotel</h4>
                                         <select class="form-select form-select-sm" aria-label=".form-select-sm example">
-                                            <option selected="">Todos</option>
-                                            <option value="1">Sin completar</option>
-                                            <option value="2">Completado</option>
+                                            <option selected="">Elegir una...</option>
+                                            <option value="1">1 - Estrella</option>
+                                            <option value="2">2 - Estrellas</option>
+                                            <option value="3">3 - Estrellas</option>
+                                            <option value="4">4 - Estrellas</option>
+                                            <option value="5">5 - Estrellas</option>
                                         </select>
                                     </div>   
                                 </div>
@@ -232,42 +235,18 @@
                         
                         <div class="row col-6.6 order-lg-1">
                             <div class="card">
-                                <div class="d-flex card-header justify-content-between align-items-center">
-                                    <h4 class="header-title">Total Sales</h4>
-                                    <div class="dropdown">
-                                        <a href="#" class="dropdown-toggle arrow-none card-drop" data-bs-toggle="dropdown" aria-expanded="false">
-                                            <i class="mdi mdi-dots-vertical"></i>
-                                        </a>
-                                        <div class="dropdown-menu dropdown-menu-end">
-                                            <!-- item-->
-                                            <a href="javascript:void(0);" class="dropdown-item">Sales Report</a>
-                                            <!-- item-->
-                                            <a href="javascript:void(0);" class="dropdown-item">Export Report</a>
-                                            <!-- item-->
-                                            <a href="javascript:void(0);" class="dropdown-item">Profit</a>
-                                            <!-- item-->
-                                            <a href="javascript:void(0);" class="dropdown-item">Action</a>
-                                        </div>
-                                    </div>
-                                </div>
-
+                                
                                 <div class="card-body pt-0">
                                     <div id="average-sales" class="apex-charts mb-4 mt-2"
-                                        data-colors="#727cf5,#0acf97,#fa5c7c,#ffbc00"></div>
+                                        data-colors="#727cf5,#fa5c7c"></div>
                                     
 
                                     <div class="chart-widget-list">
                                         <p>
-                                            <i class="mdi mdi-square text-primary"></i> Direct
+                                            <i class="mdi mdi-square text-primary"></i> Afectado
                                         </p>
                                         <p>
-                                            <i class="mdi mdi-square text-danger"></i> Affilliate                                           
-                                        </p>
-                                        <p>
-                                            <i class="mdi mdi-square text-success"></i> Sponsored
-                                        </p>
-                                        <p class="mb-0">
-                                            <i class="mdi mdi-square text-warning"></i> E-mail
+                                            <i class="mdi mdi-square text-danger"></i> No Afectado                                           
                                         </p>
                                     </div>
                                 </div> <!-- end card-body-->
@@ -285,13 +264,11 @@
                     <div class="container-fluid">
                         <div class="row">
                             <div class="col-md-6">
-                                <script>document.write(new Date().getFullYear())</script> © Hyper - Coderthemes.com
+                                <script>document.write(new Date().getFullYear())</script> © PAT035 - 35Coderthemes.com
                             </div>
                             <div class="col-md-6">
                                 <div class="text-md-end footer-links d-none d-md-block">
-                                    <a href="javascript: void(0);">About</a>
-                                    <a href="javascript: void(0);">Support</a>
-                                    <a href="javascript: void(0);">Contact Us</a>
+                                    <a href="javascript: void(0);">Soporte</a>
                                 </div>
                             </div>
                         </div>
