--- a/src/views/PAT-035/profile.hbs
+++ b/src/views/PAT-035/profile.hbs
@@ -13,20 +13,20 @@
                             <!-- Logo light -->
                             <a href="/PAT-035/home" class="logo-light">
                                 <span class="logo-lg">
-                                    <img src=" /images/logo.png" alt="logo">
+                                    <img src="" alt="logo">
                                 </span>
                                 <span class="logo-sm">
-                                    <img src=" /images/logo-sm.png" alt="small logo">
+                                    <img src="" alt="small logo">
                                 </span>
                             </a>
 
                             <!-- Logo Dark -->
                             <a href="/PAT-035/home" class="logo-dark">
                                 <span class="logo-lg">
-                                    <img src=" /images/logo-dark.png" alt="dark logo">
+                                    <img src="" alt="dark logo">
                                 </span>
                                 <span class="logo-sm">
-                                    <img src=" /images/logo-dark-sm.png" alt="small logo">
+                                    <img src="" alt="small logo">
                                 </span>
                             </a>
                         </div>
@@ -116,20 +116,20 @@
                 <!-- Brand Logo Light -->
                 <a href="/PAT-035/home" class="logo logo-light">
                     <span class="logo-lg">
-                        <img src=" /images/logo.png" alt="logo">
+                        <img src="" alt="logo">
                     </span>
                     <span class="logo-sm">
-                        <img src=" /images/logo-sm.png" alt="small logo">
+                        <img src="" alt="small logo">
                     </span>
                 </a>
 
                 <!-- Brand Logo Dark -->
                 <a href="/PAT-035/home" class="logo logo-dark">
                     <span class="logo-lg">
-                        <img src=" /images/logo-dark.png" alt="dark logo">
+                        <img src="" alt="dark logo">
                     </span>
                     <span class="logo-sm">
-                        <img src=" /images/logo-dark-sm.png" alt="small logo">
+                        <img src="" alt="small logo">
                     </span>
                 </a>
 
@@ -179,7 +179,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="">
+                                        <a href="/PAT-035/reportes">
                                             <i class="uil-clipboard-alt"></i>
                                             <span>Generar Reporte</span>
                                         </a>
@@ -328,13 +328,11 @@
                     <div class="container-fluid">
                         <div class="row">
                             <div class="col-md-6">
-                                <script>document.write(new Date().getFullYear())</script> © Hyper - Coderthemes.com
+                                <script>document.write(new Date().getFullYear())</script> © PAT035 - 35Coderthemes.com
                             </div>
                             <div class="col-md-6">
                                 <div class="text-md-end footer-links d-none d-md-block">
-                                    <a href="javascript: void(0);">About</a>
-                                    <a href="javascript: void(0);">Support</a>
-                                    <a href="javascript: void(0);">Contact Us</a>
+                                    <a href="javascript: void(0);">Soporte</a>
                                 </div>
                             </div>
                         </div>
@@ -1031,3 +1029,48 @@
         <script src="/js/app.min.js"></script>
 
     </body>
+
+<!-- 
+     Topbar Brand Logo
+                        <div class="logo-topbar">
+                             Logo light 
+                            <a href="/PAT-035/home" class="logo-light">
+                                <span class="logo-lg">
+                                    <img src=" /images/logo.png" alt="logo">
+                                </span>
+                                <span class="logo-sm">
+                                    <img src=" /images/logo-sm.png" alt="small logo">
+                                </span>
+                            </a>
+
+                             Logo Dark 
+                            <a href="/PAT-035/home" class="logo-dark">
+                                <span class="logo-lg">
+                                    <img src=" /images/logo-dark.png" alt="dark logo">
+                                </span>
+                                <span class="logo-sm">
+                                    <img src=" /images/logo-dark-sm.png" alt="small logo">
+                                </span>
+                            </a>
+                        </div>
+
+                         Brand Logo Light 
+                <a href="/PAT-035/home" class="logo logo-light">
+                    <span class="logo-lg">
+                        <img src=" /images/logo.png" alt="logo">
+                    </span>
+                    <span class="logo-sm">
+                        <img src=" /images/logo-sm.png" alt="small logo">
+                    </span>
+                </a>
+
+                <! Brand Logo Dark 
+                <a href="/PAT-035/home" class="logo logo-dark">
+                    <span class="logo-lg">
+                        <img src=" /images/logo-dark.png" alt="dark logo">
+                    </span>
+                    <span class="logo-sm">
+                        <img src=" /images/logo-dark-sm.png" alt="small logo">
+                    </span>
+                </a>
+-->
