--- a/src/views/PAT-035/reportes.hbs
+++ b/src/views/PAT-035/reportes.hbs
@@ -13,20 +13,20 @@
                             <!-- Logo light -->
                             <a href="/PAT-035/home" class="logo-light">
                                 <span class="logo-lg">
-                                    <img src=" /images/logo.png" alt="logo">
+                                    <img src="" alt="logo">
                                 </span>
                                 <span class="logo-sm">
-                                    <img src=" /images/logo-sm.png" alt="small logo">
+                                    <img src="" alt="small logo">
                                 </span>
                             </a>
 
                             <!-- Logo Dark -->
                             <a href="/PAT-035/home" class="logo-dark">
                                 <span class="logo-lg">
-                                    <img src=" /images/logo-dark.png" alt="dark logo">
+                                    <img src="" alt="dark logo">
                                 </span>
                                 <span class="logo-sm">
-                                    <img src=" /images/logo-dark-sm.png" alt="small logo">
+                                    <img src="" alt="small logo">
                                 </span>
                             </a>
                         </div>
@@ -115,20 +115,20 @@
                 <!-- Brand Logo Light -->
                 <a href="/PAT-035/home" class="logo logo-light">
                     <span class="logo-lg">
-                        <img src=" /images/logo.png" alt="logo">
+                        <img src="" alt="logo">
                     </span>
                     <span class="logo-sm">
-                        <img src=" /images/logo-sm.png" alt="small logo">
+                        <img src="" alt="small logo">
                     </span>
                 </a>
 
                 <!-- Brand Logo Dark -->
                 <a href="/PAT-035/home" class="logo logo-dark">
                     <span class="logo-lg">
-                        <img src=" /images/logo-dark.png" alt="dark logo">
+                        <img src="" alt="dark logo">
                     </span>
                     <span class="logo-sm">
-                        <img src=" /images/logo-dark-sm.png" alt="small logo">
+                        <img src="" alt="small logo">
                     </span>
                 </a>
 
@@ -213,48 +213,125 @@
 
                     <!-- Start Content-->                       
 
-                    <div class="col-lg-8 " >
-                                <div class="card">
-                                    <div class="card-header d-flex justify-content-between align-items-center">
-                                        <h4 class="header-title">Ordenar por</h4>
-                                        <div>
-                                            <select class="form-select form-select-sm" aria-label=".form-select-sm example">
-                                                <option selected="">Todos</option>
-                                                <option value="1">10/01/2023</option>
-                                                <option value="2">10/06/2023</option>
-                                            </select>
-                                        </div>
-                                        
-                                    </div> 
-                                    <div class="card-body pt-2">
-                                        <div class="table-responsive" style="overflow-x: auto; max-height: 700px;">
-                                            <table class="table table-centered table-nowrap mb-0">
-                                                <thead>
-                                                    <tr>
-                                                        <th scope="col">Fecha</th>
-                                                        <th scope="col">Nombre</th>
-                                                        <th scope="col" class="text-end">Acción</th>
-                                                    </tr>
-                                                </thead>
-                                                <tbody>
-                                                    <tr>
-                                                        <td>
-                                                            <div class="d-flex align-items-center">
-                                                                
-                                                                <div class="flex-grow-1 ms-2">
-                                                                    10/01/2023
-                                                                </div>
-                                                            </div>
-                                                        </td>
-                                                        <td>Alberto Díal Altamirano</td>
+                    <div class="offcanvas-footer border-top p-3 text-center">
+                        <div class="row">
+                            <div class="col-12">
+                                <button type="button" class="btn btn-light w-100">Generar Reporte</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-8.8" >
+                        <div class="card">
+                            <div class="card-header d-flex justify-content-between align-items-center">
+                                <h4 class="header-title">Encuesta del Empleado</h4>
+                                <div>
+                                    <select class="form-select form-select-sm" aria-label=".form-select-sm example">
+                                        <option selected="">Todos</option>
+                                        <option value="1">10/01/2023</option>
+                                        <option value="2">10/06/2023</option>
+                                    </select>
+                                </div>
+                                
+                            </div> 
+                            <div class="card-body pt-2">
+                                <div class="table-responsive" style="overflow-x: auto; max-height: 700px;">
+                                    <table class="table table-centered table-nowrap mb-0">
+                                        <thead>
+                                            <tr>
+                                                <th scope="col">Fecha</th>
+                                                <th scope="col">Nombre</th>
+                                                <th scope="col" class="text-end">Acción</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr>
+                                                <td>
+                                                    <div class="d-flex align-items-center">
                                                         
+                                                        <div class="flex-grow-1 ms-2">
+                                                            10/01/2023
+                                                        </div>
+                                                    </div>
+                                                </td>
+                                                <td>Alberto Díal Altamirano</td>
                                                 
-                                                        <td class="text-end">
-                                                            <a href="javascript:void(0);" class="font-18 text-info me-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Mostrar"><i class="uil uil-eye"></i></a>
-                                                            <a href="javascript:void(0);" class="font-18 text-danger" data-bs-toggle="tooltip" data-bs-placement="top" title="Eliminar"><i class="uil uil-trash"></i></a>
-                                                        </td>
-                                                    </tr> <!-- end tr -->        
+                                        
+                                                <td class="text-end">
+                                                    <a href="javascript:void(0);" class="font-18 text-info me-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Mostrar"><i class="uil uil-eye"></i></a>
+                                                    <a href="javascript:void(0);" class="font-18 text-danger" data-bs-toggle="tooltip" data-bs-placement="top" title="Eliminar"><i class="uil uil-trash"></i></a>
+                                                </td>
+                                            </tr> <!-- end tr -->        
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-header d-flex justify-content-between align-items-center">
+                                <h4 class="header-title">Reporte de la Encuesta</h4>
+                                <div>
+                                    <select class="form-select form-select-sm" aria-label=".form-select-sm example">
+                                        <option selected="">Todos</option>
+                                        <option value="1">10/01/2023</option>
+                                        <option value="2">10/06/2023</option>
+                                    </select>
+                                </div>
+                                
+                            </div> 
+                            <div class="card-body pt-2">
+                                <div class="table-responsive" style="overflow-x: auto; max-height: 700px;">
+                                    <table class="table table-centered table-nowrap mb-0">
+                                        <thead>
+                                            <tr>
+                                                <th scope="col">Fecha</th>
+                                                <th scope="col">Nombre</th>
+                                                <th scope="col" class="text-end">Acción</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr>
+                                                <td>
+                                                    <div class="d-flex align-items-center">
+                                                        
+                                                        <div class="flex-grow-1 ms-2">
+                                                            10/01/2023
+                                                        </div>
+                                                    </div>
+                                                </td>
+                                                <td>Alberto Díal Altamirano</td>
+                                                
+                                        
+                                                <td class="text-end">
+                                                    <a href="javascript:void(0);" class="font-18 text-info me-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Mostrar"><i class="uil uil-eye"></i></a>
+                                                    <a href="javascript:void(0);" class="font-18 text-danger" data-bs-toggle="tooltip" data-bs-placement="top" title="Eliminar"><i class="uil uil-trash"></i></a>
+                                                </td>
+                                            </tr> <!-- end tr -->        
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
+                <!-- Footer Start -->
+                <footer class="footer">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <script>document.write(new Date().getFullYear())</script> © PAT035 - 35Coderthemes.com
+                            </div>
+                            <div class="col-md-6">
+                                <div class="text-md-end footer-links d-none d-md-block">
+                                    <a href="javascript: void(0);">Soporte</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </footer>
+                <!-- end Footer -->
+
+            </div>
             <!-- ============================================================== -->
             <!-- End Page content -->
             <!-- ============================================================== -->
