--- a/src/views/PAT-035/empleados.hbs
+++ b/src/views/PAT-035/empleados.hbs
@@ -13,20 +13,20 @@
                             <!-- Logo light -->
                             <a href="/PAT-035/home" class="logo-light">
                                 <span class="logo-lg">
-                                    <img src=" /images/logo.png" alt="logo">
+                                    <img src="" alt="logo">
                                 </span>
                                 <span class="logo-sm">
-                                    <img src=" /images/logo-sm.png" alt="small logo">
+                                    <img src="" alt="small logo">
                                 </span>
                             </a>
 
                             <!-- Logo Dark -->
                             <a href="/PAT-035/home" class="logo-dark">
                                 <span class="logo-lg">
-                                    <img src=" /images/logo-dark.png" alt="dark logo">
+                                    <img src="" alt="dark logo">
                                 </span>
                                 <span class="logo-sm">
-                                    <img src=" /images/logo-dark-sm.png" alt="small logo">
+                                    <img src="" alt="small logo">
                                 </span>
                             </a>
                         </div>
@@ -116,20 +116,20 @@
                 <!-- Brand Logo Light -->
                 <a href="/PAT-035/home" class="logo logo-light">
                     <span class="logo-lg">
-                        <img src=" /images/logo.png" alt="logo">
+                        <img src="" alt="logo">
                     </span>
                     <span class="logo-sm">
-                        <img src=" /images/logo-sm.png" alt="small logo">
+                        <img src="" alt="small logo">
                     </span>
                 </a>
 
                 <!-- Brand Logo Dark -->
                 <a href="/PAT-035/home" class="logo logo-dark">
                     <span class="logo-lg">
-                        <img src=" /images/logo-dark.png" alt="dark logo">
+                        <img src="" alt="dark logo">
                     </span>
                     <span class="logo-sm">
-                        <img src=" /images/logo-dark-sm.png" alt="small logo">
+                        <img src="" alt="small logo">
                     </span>
                 </a>
 
@@ -507,20 +507,18 @@
                     <div class="container-fluid">
                         <div class="row">
                             <div class="col-md-6">
-                                <script>document.write(new Date().getFullYear())</script> © Hyper - Coderthemes.com
+                                <script>document.write(new Date().getFullYear())</script> © PAT035 - 35Coderthemes.com
                             </div>
                             <div class="col-md-6">
                                 <div class="text-md-end footer-links d-none d-md-block">
-                                    <a href="javascript: void(0);">About</a>
-                                    <a href="javascript: void(0);">Support</a>
-                                    <a href="javascript: void(0);">Contact Us</a>
+                                    <a href="javascript: void(0);">Soporte</a>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </footer>
                 <!-- end Footer -->
-
+                
             </div>
 
             <!-- ============================================================== -->
