--- a/src/views/auth/signup.hbs
+++ b/src/views/auth/signup.hbs
@@ -8,7 +8,7 @@
                             <!-- Logo-->
                             <div class="card-header py-4 text-center bg-primary">
                                 <a>
-                                    <span><img src="/images/logo.png" alt="logo" height="22"></span>
+                                    <span><img src="" alt="logo" height="22"></span>
                                 </a>
                             </div>
 
