Grafica del empleado

--- a/src/views/PAT-035/reportes.hbs
+++ b/src/views/PAT-035/reportes.hbs
@@ -192,9 +192,7 @@
                                 </ul>
                             </div>
                         </li>
-
-
-
+                        
                     </ul>
                     <!--- End Sidemenu -->
 
@@ -311,6 +309,25 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="row col-6.6 order-lg-1">
+                            <div class="card">
+                                <h4 class="header-title">Estadística del Hotel</h4>
+                                <div class="card-body pt-0">
+                                    <div id="average-sales" class="apex-charts mb-4 mt-2"
+                                        data-colors="#727cf5,#fa5c7c"></div>
+                                    
+
+                                    <div class="chart-widget-list">
+                                        <p>
+                                            <i class="mdi mdi-square text-primary"></i> Afectado
+                                        </p>
+                                        <p>
+                                            <i class="mdi mdi-square text-danger"></i> No Afectado                                           
+                                        </p>
+                                    </div>
+                                </div> <!-- end card-body-->
+                            </div> <!-- end card-->
+                        </div> <!-- end col-->
                     </div>
                 </div>
 
